# hyperdream

./: .gitignore  README.org  dune-project  flake.nix  hyperdream.opam
docs/: API.org  ARCHITECTURE.org  GETTING_STARTED.org
examples/chat/: dune-project  flake.nix  main.ml
examples/chat/static/css/: style.css
examples/chat/static/js/: datastar.js
examples/chat/templates/: index.jinja
examples/counter/: dune  dune-project  flake.nix  gen_template.nu  main.ml
examples/counter/static/css/: style.css
examples/counter/static/js/: datastar.js
examples/counter/templates/: index.jinja
examples/game-of-life/: dune-project  flake.nix  game.ml  main.ml  render.ml
examples/game-of-life/static/css/: style.css
examples/game-of-life/templates/: index.jinja
examples/todo/: dune  dune-project  flake.nix  main.ml
examples/todo/static/css/: style.css
examples/todo/templates/: index.jinja
lib/: action.ml  app.ml  assets.ml  dune  html.ml  hyperdream.ml  hyperdream.mli  middleware.ml  router.ml  session.ml  sse.ml  store.ml  template.ml  view.ml
unikernel/: dune  unikernel.ml
